Dev-RBI/src/objects/Detail_Price_List__c.object
<CustomObject>
    <description>Stores project level &amp; visit level price list information</description>
    <fields>
        <fullName>ProjPriceUniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ProjPriceUniqueKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <description>Used in Visit trigger.</description>
        <formula>Visit__r.Project__r.Id</formula>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Used in Visit trigger handler.</description>
        <formula>Tower__r.Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Id</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Detail Price List</relationshipLabel>
        <relationshipName>Detail_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_0__c</fullName>
        <label>Rate per sqft - 0</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_10__c</fullName>
        <description>Stores per square feet rate</description>
        <label>Rate per sqft - 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_11__c</fullName>
        <description>Stores per square feet rate</description>
        <label>Rate per sqft - 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Id,  Tower__r.Name, &quot;_blank&quot;)</formula>
        <label>Tower</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower</label>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Detail Price List</relationshipLabel>
        <relationshipName>Detail_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores relationship with visit</description>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Detail Price List</relationshipLabel>
        <relationshipName>Detail_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Detail Price List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DPL-{0000}</displayFormat>
        <label>Detail Price List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detail Price List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Project_Id_Should_Not_be_blank_for_PMS_V</fullName>
        <active>true</active>
        <description>Project ID field should be blank for all the entities associated with PMS Visit</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Project__c )), 
NOT(ISBLANK(Visit__c)) 

)</errorConditionFormula>
        <errorMessage>Please ensure that either Project Id or Visit Id is blank!</errorMessage>
    </validationRules>
</CustomObject>